--- a/style.css
+++ b/style.css
@@ -1,7 +1,32 @@
-main {
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     flex-direction: column;
+}
+
+/* input[type="text"] {
+    -webkit-box-sizing: border-box; // Safari/Chrome, other WebKit
+    -moz-box-sizing: border-box;    // Firefox, other Gecko
+    box-sizing: border-box;         // Opera/IE 8+
+} */
+
+.input-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+.input-author {
+    grid-column: 2 / 4;
+}
+
+.input-description {
+    grid-column: 1 / 3;
+}
+
+input {
+    box-sizing: border-box;
+    width: 100%;
 }
