--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    margin-top: 20vh;
     align-items: center;
     height: 100vh;
     flex-direction: column;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* input[type="text"] {
@@ -29,4 +31,52 @@ body {
 input {
     box-sizing: border-box;
     width: 100%;
+    height: 30px;
+    border-radius: 6px;
+}
+
+h3 {
+    margin: 10px 0px 0px 5px;
+}
+
+.button-1 {
+  background-color: #181818;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  width: 150px;
+  line-height: 20px;
+  list-style: none;
+  margin: 20px 0px 0px 0px;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-1:hover,
+.button-1:focus {
+  background-color: rgb(70, 70, 70);
+}
+
+table {
+    width: 100%;
+    margin-top: 20px;
+}
+
+table, th, td {
+    border: solid 1px black;
+    text-align: left;
 }
