--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'Roboto', sans-serif;
+}
+
 body {
     display: flex;
     /* justify-content: center; */
@@ -5,27 +9,24 @@ body {
     align-items: center;
     height: 100vh;
     flex-direction: column;
-    font-family: 'Roboto', sans-serif;
 }
-
-/* input[type="text"] {
-    -webkit-box-sizing: border-box; // Safari/Chrome, other WebKit
-    -moz-box-sizing: border-box;    // Firefox, other Gecko
-    box-sizing: border-box;         // Opera/IE 8+
-} */
 
 .input-container {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 10px;
 }
 
-.input-author {
-    grid-column: 2 / 4;
+.name-container {
+    grid-column: 1 / 3;
 }
 
-.input-description {
-    grid-column: 1 / 3;
+.author-container {
+    grid-column: 3 / 5;
+}
+
+.genre-container {
+    grid-column: 2 / 4;
 }
 
 input {
@@ -36,40 +37,48 @@ input {
 }
 
 h3 {
-    margin: 10px 0px 0px 5px;
+    margin: 5px 0px 0px 5px;
 }
 
-.button-1 {
+.add-button {
   background-color: #181818;
   border-radius: 8px;
   border-style: none;
-  box-sizing: border-box;
   color: #FFFFFF;
   cursor: pointer;
-  display: inline-block;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 400;
   height: 40px;
   width: 150px;
-  line-height: 20px;
-  list-style: none;
   margin: 20px 0px 0px 0px;
-  outline: none;
   padding: 10px 16px;
-  position: relative;
   text-align: center;
-  text-decoration: none;
-  transition: color 100ms;
-  vertical-align: baseline;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
 }
 
-.button-1:hover,
-.button-1:focus {
+.add-button:hover,
+.add-button:focus {
   background-color: rgb(70, 70, 70);
 }
+
+.delete-button {
+    background-color: #a40000;
+    border-radius: 8px;
+    border-style: none;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    height: 30px;
+    width: 90%;
+    margin: 0;
+    text-align: center;
+  }
+
+  .delete-button:hover,
+  .delete-button:focus {
+    background-color: rgb(255, 131, 131);
+    color: black;
+  }
 
 table {
     width: 100%;
@@ -79,4 +88,8 @@ table {
 table, th, td {
     border: solid 1px black;
     text-align: left;
+}
+
+.delete-button-column, .book-status-column {
+    text-align: center;
 }
