update style and add validation

--- a/style.css
+++ b/style.css
@@ -29,11 +29,15 @@ body {
     grid-column: 2 / 4;
 }
 
-input {
+input, select {
     box-sizing: border-box;
     width: 100%;
     height: 30px;
     border-radius: 6px;
+}
+
+select {
+    text-align: center;
 }
 
 h3 {
